@@ -1,3 +1,7 @@
+2006-01-01  Junichi Uekawa  <dancer@debian.org>
+
+	* realksh.c: sample program to do kernel shell.
+
 2005-11-18  Junichi Uekawa  <dancer@debian.org>
 
 	* tests/asm-ppc.S: use a shorter version of test file for ppc 
